# brownfield-cartographer

./: .gitignore  README.md  RECONNAISSANCE.md  diagnose.py  pyproject.toml  requirements.txt  test_parsing.py  test_requirements.py  visualize_carto_graph.py
.cartography/: CODEBASE.md  PERFECT_CODEBASE.md  lineage_graph.json  module_graph.json  onboarding_brief.md  semantic_index.json
.specify/agent-commands/: speckit.plan.md
.specify/memory/: constitution.md
backend/: api.py
frontend/: index.html
frontend/css/: legend.css  styles.css
frontend/js/: app.js
refined_/: cartography_trace.jsonl  lineage_graph.json
specs/001-brownfield-cartographer/: plan.md  spec.md  tasks.md
src/: cli.py  orchestrator.py
src/agents/: archivist.py  context_budget.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: airflow_dag_parser.py  column_lineage.py  dag_config_parser.py  dbt_manifest_parser.py  notebook_parser.py  prefect_flow_parser.py  python_dataflow.py  sql_lineage.py  tree_sitter_analyzer.py
src/analyzers/python/: classes.scm  imports.scm
src/analyzers/sql/: imports.scm  public_api.scm  tables.scm
src/brownfield_cartographer/: cli.py
src/brownfield_cartographer/agents/: __init__.py  surveyor.py
src/brownfield_cartographer/analyzers/: __init__.py  git_analyzer.py
src/brownfield_cartographer/analyzers/query_library/python/: public_api.scm
src/brownfield_cartographer/models/: nodes.py
src/graph/: knowledge_graph.py
src/models/: __init__.py  edges.py  graph.py  nodes.py
tests/: test_models.py
(+3 files in other folders)
